# openapi/openApi.public.yaml
@@ -500,43 +500,6 @@ paths:
           $ref: '#/components/responses/UnprocessableEntity'
         '500':
           $ref: '#/components/responses/InternalServerError'
-  /core-api/cardaccount/{accountId}/set-visibility:
-    post:
-      tags:
-        - card-account-controller
-      operationId: setAccountVisibility
-      parameters:
-        - name: accountId
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AccountSetVisibilityDto'
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/CardAccount'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '401':
-          $ref: '#/components/responses/Unauthorized'
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        '404':
-          $ref: '#/components/responses/NotFound'
-        '422':
-          $ref: '#/components/responses/UnprocessableEntity'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
   /core-api/transactions/{accountId}:
     get:
       tags:
@@ -1042,6 +1005,9 @@ components:
       properties:
         theme:
           type: string
+          enum:
+            - light
+            - dark
         hiddenAccounts:
           uniqueItems: true
           type: array
@@ -1219,13 +1185,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/TransactionOperation'
-    AccountSetVisibilityDto:
-      type: object
-      required:
-        - visible
-      properties:
-        visible:
-          type: boolean
     CardAccountCreateModelDto:
       type: object
       properties:
